--- a/2_fft_filters_db.ipynb
+++ b/2_fft_filters_db.ipynb
@@ -6,11 +6,14 @@
    "source": [
     "Usefull (fun) links:\n",
     "Great intuitive explanation of the Fourier series:\n",
+    "\n",
     "https://youtu.be/spUNpyF58BY\n",
     "\n",
     "https://www.mathsisfun.com/algebra/eulers-formula.html\n",
+    "\n",
     "https://madhavuniversity.edu.in/maclaurins-theorem.html\n",
-    "https://www.mathsisfun.com/algebra/taylor-series.html"
+    "\n",
+    "https://www.mathsisfun.com/algebra/taylor-series.html\n"
    ]
   },
   {
@@ -26,7 +29,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -59,8 +64,15 @@
     "plt.subplot(313)\n",
     "plt.plot( np.arange( y.size )/y.size*fs , mag )\n",
     "plt.savefig('figs/fft.png', dpi=300)\n",
-    "# TODO: mention why keeping the first half is important\n",
-    "# TODO: change bin size and show why it is useful"
+    "# Question: why keeping the first half is fine?\n",
+    "# Exercise: change bin size and show why it is useful"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Discrete Fourier Transform implementations (as the np.fft.fft(x) employed in this document) usually return a real (y.real) and an imaginary (y.imag) part. Frequency amplitude information can be retrieved through the magnitude: $$ \\text{M}(f) \\sqrt{a^2+b^2}, $$ where $ a = \\text{real}(FFT(f)) $ and $ b = \\text{imaginary}(FFT(f)) $."
    ]
   },
   {
@@ -103,8 +115,7 @@
     "plt.subplot(212)\n",
     "plt.plot( np.arange( y.size//2 )/y.size*fs , mag[:y.size//2] )\n",
     "plt.savefig('figs/fft.png', dpi=300)\n",
-    "# TODO: mention why keeping the first half is important\n",
-    "# TODO: change bin size and show why it is useful"
+    "# Exercise: prepare a sawtooth and a square wave by modifying the above given implementation."
    ]
   },
   {
@@ -288,6 +299,35 @@
     "d = librosa.amplitude_to_db( np.abs(p), ref=np.max )\n",
     "librosa.display.specshow(d, sr=fs, x_axis='time', y_axis='linear')\n",
     "plt.savefig('figs/spec_lbrs.png', dpi=300)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decibel\n",
+    "dB or Decibel is a relative unit of measure, given a reference value. In audio, when it expresses *power*, it is expressed as\n",
+    "\n",
+    "$$ L_P = 10\\ \\log(\\frac{P}{P_{\\text{ref}}}) \\text{,} $$\n",
+    "\n",
+    "where $L_P$ is the dB value, $P$ is the *power* presure level within a short time window in the signal and $ P_{\\text{ref}} $ is the reference presure level *power*. $ P_{\\text{ref}} $ can be considered to describe anything, depending on the field of application.\n",
+    "\n",
+    "But in audio we are also concerced with pressure levels directly, instead of power of pressure. In this case, the computation becomes:\n",
+    "\n",
+    "$$ L_p = 20\\ \\log(\\frac{p}{p_{\\text{ref}}}) \\text{,} $$\n",
+    "\n",
+    "where all employed terms concern presure level in RMS (to be explained) rather than *power* of the presure level (notice that capital $P$ has become lowercase $p$). Some usually employed $ P_{\\text{ref}} $ values are:\n",
+    "\n",
+    "1) usually denoted simply as **dB**: absolute threshold of hearing, i.e., $ p_{\\text{ref}} = 2*10^{-6} $ pascals (20 micropascals) and\n",
+    "\n",
+    "2) usually denoted as **dBFS** (dB full scale): the highest possible value that can be achieved in a system (depends on system characteristics).\n",
+    "\n",
+    "The conventional dB values (1) are usually positive (check https://www.iacacoustics.com/blog-full/comparative-examples-of-noise-levels.html) while dBFS (2) is normally negative (in our computers 0 or positive values indicate that the soundcard capacity has been exceeded and we should expect distortion from clipping).\n",
+    "\n",
+    "### RMS (Root Mean Square)\n",
+    "RMS (or quadratic mean) describes the amplitude of the signal but *is not* the power of the signal (it has to do with equivalent AC and DC signals in terms of power). We obtain power from RMS by removing the root from (or squaring) RMS. For some description of RMS amplitude check: https://dosits.org/science/advanced-topics/introduction-to-signal-levels/ \n",
+    "\n",
+    "$$ RMS = \\sqrt{\\frac{1}{N}\\sum_{i=0}^{n-1}x_i^2} $$\n"
    ]
   },
   {
