Changes after class 5

--- a/2_fft_filters_db.ipynb
+++ b/2_fft_filters_db.ipynb
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Discrete Fourier Transform implementations (as the np.fft.fft(x) employed in this document) usually return a real (y.real) and an imaginary (y.imag) part. Frequency amplitude information can be retrieved through the magnitude: $$ \\text{M}(f) \\sqrt{a^2+b^2}, $$ where $ a = \\text{real}(FFT(f)) $ and $ b = \\text{imaginary}(FFT(f)) $."
+    "Discrete Fourier Transform implementations (as the np.fft.fft(x) employed in this document) usually return a real (y.real) and an imaginary (y.imag) part. Frequency amplitude information can be retrieved through the magnitude: $$ \\text{M}(f) = \\sqrt{a^2+b^2}, $$ where $ a = \\text{real}(FFT(f)) $ and $ b = \\text{imaginary}(FFT(f)) $."
    ]
   },
   {
@@ -341,7 +341,7 @@
     "### RMS (Root Mean Square)\n",
     "RMS (or quadratic mean) describes the amplitude of the signal but *is not* the power of the signal (it has to do with equivalent AC and DC signals in terms of power). We obtain power from RMS by removing the root from (or squaring) RMS. For some description of RMS amplitude check: https://dosits.org/science/advanced-topics/introduction-to-signal-levels/ \n",
     "\n",
-    "$$ RMS = \\sqrt{\\frac{1}{N}\\sum_{i=0}^{n-1}x_i^2} $$\n"
+    "$$ RMS = \\sqrt{\\frac{1}{N}\\sum_{i=0}^{N-1}x_i^2} $$\n"
    ]
   },
   {
