--- a/1_sampling_and_quantisation.ipynb
+++ b/1_sampling_and_quantisation.ipynb
@@ -4398,7 +4398,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -4412,7 +4412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
