--- a/class04/classes_tutorial.ipynb
+++ b/class04/classes_tutorial.ipynb
@@ -1,26 +1,12 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "classes_tutorial.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "AUgscv57nZ9G"
       },
+      "outputs": [],
       "source": [
         "# make a basic class or Human\n",
         "class Human:\n",
@@ -43,12 +29,11 @@
         "        print('name:        ', self.name)\n",
         "        print('is_adult:    ', self.is_adult)\n",
         "# end Human"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -56,17 +41,10 @@
         "id": "BrDvW5aNokgu",
         "outputId": "0edb0497-37b4-4062-f650-26f12bc14e9e"
       },
-      "source": [
-        "# initialize object of the Human class: age is mantatory\n",
-        "test_human = Human(24)\n",
-        "# check state\n",
-        "test_human.print_info()"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "age:          24\n",
             "gender:       F\n",
@@ -74,10 +52,17 @@
             "is_adult:     True\n"
           ]
         }
+      ],
+      "source": [
+        "# initialize object of the Human class: age is mantatory\n",
+        "test_human = Human(24)\n",
+        "# check state\n",
+        "test_human.print_info()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -85,17 +70,10 @@
         "id": "TbX8FDXEpwBc",
         "outputId": "fc4c6560-223a-47b3-ce05-162c1c990d48"
       },
-      "source": [
-        "# initialize object of the Human class with some additional info\n",
-        "test_human = Human(15, name='CJ')\n",
-        "# check state\n",
-        "test_human.print_info()"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "age:          15\n",
             "gender:       F\n",
@@ -103,13 +81,21 @@
             "is_adult:     False\n"
           ]
         }
+      ],
+      "source": [
+        "# initialize object of the Human class with some additional info\n",
+        "test_human = Human(15, name='CJ')\n",
+        "# check state\n",
+        "test_human.print_info()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "Qu3Phoj2qL1c"
       },
+      "outputs": [],
       "source": [
         "# make a new class for Athlete that *inherits* from the class Human\n",
         "# which makes sense, since athletes are humans\n",
@@ -139,13 +125,13 @@
         "        print('height:      ', self.height)\n",
         "        print('weight:      ', self.weight)\n",
         "        print('bmi:         ', self.bmi)\n",
-        "        print('bmi cat.:    ', self.bmi_category)"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "        print('bmi cat.:    ', self.bmi_category)\n",
+        "# end class Athlete"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -153,17 +139,10 @@
         "id": "nT2xWTECsVIO",
         "outputId": "9a8bda97-7927-44e5-fd4b-d17b75a4122a"
       },
-      "source": [
-        "# initialize an object of the class Athlete\n",
-        "test_athlete = Athlete(21, height=1.7, weight=60)\n",
-        "# check state\n",
-        "test_athlete.print_info()"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "age:          21\n",
             "gender:       F\n",
@@ -175,7 +154,29 @@
             "bmi cat.:     healthy\n"
           ]
         }
+      ],
+      "source": [
+        "# initialize an object of the class Athlete\n",
+        "test_athlete = Athlete(21, height=1.7, weight=60)\n",
+        "# check state\n",
+        "test_athlete.print_info()"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "classes_tutorial.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
