--- a/class02/1_sinusoids_and_sound.ipynb
+++ b/class02/1_sinusoids_and_sound.ipynb
@@ -21,13 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dedb33373b0e409aaf228f0a9e0d20a1",
+       "model_id": "f02d2a369f2a48708f2288945a5ef75e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,14 +44,14 @@
        "<function __main__.change_time_value(t_v=0.0)>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ccf7612596394e75a3fb3aa0145585a9",
+       "model_id": "f566a111509f4cdf87ec81d622e74f3d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -75,7 +75,7 @@
     }
    ],
    "source": [
-    "# %matplotlib notebook\n",
+    "# %matplotlib notebook # no longer working\n",
     "%matplotlib ipympl\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
     "import ipywidgets as widgets\n",
